--- a/programmation.html
+++ b/programmation.html
@@ -15,7 +15,20 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Hammersmith+One&family=Nosifer&display=swap" rel="stylesheet">
-        <script src="src/js/carousel.js"></script>
+        <script src="src/js/carousels/J1/carousel1.js"></script>
+        <script src="src/js/carousels/J1/carousel2.js"></script>
+        <script src="src/js/carousels/J1/carousel3.js"></script>
+        <script src="src/js/carousels/J1/carousel4.js"></script>
+        <script src="src/js/carousels/J2/carousel5.js"></script>
+        <script src="src/js/carousels/J2/carousel6.js"></script>
+        <script src="src/js/carousels/J2/carousel7.js"></script>
+        <script src="src/js/carousels/J2/carousel8.js"></script>
+        <script src="src/js/carousels/J3/carousel9.js"></script>
+        <script src="src/js/carousels/J3/carousel10.js"></script>
+        <script src="src/js/carousels/J3/carousel11.js"></script>
+        <script src="src/js/carousels/J3/carousel12.js"></script>
+    </head>
+    <body class="body__class">
         <div class="header__mobile">
             <img class="header__logo" src="assets/logo/logo_without_text.png">
             <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
@@ -26,8 +39,6 @@
             <img class="header__img" src="assets/header/it_poster.png">
             <h1 class="header__title">Programmation</h1>
         </div>
-    </head>
-    <body class="body__class">
         <h2 class="body__title">
             Organisation
         </h2>
@@ -50,52 +61,52 @@
         <p class="body__semi__title">
             11h - 13h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_1/it_follows_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_1/shaun_of_the_dead_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_1/the_brids_poster.png" alt="Image 3">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_1/the_house_of_1000_dead_poster.png" alt="Image 4">
+        <div class="body__carousel__1">
+            <div class="carousel__1">
+                <img class="carousel__img__1" src="assets/planning_images/day_1/crenel_1/it_follows_poster.png" alt="Image 1">
+                <img class="carousel__img__1" src="assets/planning_images/day_1/crenel_1/shaun_of_the_dead_poster.png" alt="Image 2">
+                <img class="carousel__img__1" src="assets/planning_images/day_1/crenel_1/the_brids_poster.png" alt="Image 3">
+                <img class="carousel__img__1" src="assets/planning_images/day_1/crenel_1/the_house_of_1000_dead_poster.png" alt="Image 4">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__1">❮</button>
+            <button class="button__next__1">❯</button>
         </div>
         <p class="body__semi__title">
             15h - 17h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_2/halloween_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_2/megan_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_2/the_descent_poster.png" alt="Image 3">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_2/the_exorcist_poster.png" alt="Image 4">
+        <div class="body__carousel__2">
+            <div class="carousel__2">
+                <img class="carousel__img__2" src="assets/planning_images/day_1/crenel_2/halloween_poster.png" alt="Image 1">
+                <img class="carousel__img__2" src="assets/planning_images/day_1/crenel_2/megan_poster.png" alt="Image 2">
+                <img class="carousel__img__2" src="assets/planning_images/day_1/crenel_2/the_descent_poster.png" alt="Image 3">
+                <img class="carousel__img__2" src="assets/planning_images/day_1/crenel_2/the_exorcist_poster.png" alt="Image 4">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__2">❮</button>
+            <button class="button__next__2">❯</button>
         </div>
         <p class="body__semi__title">
             19h - 21h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_3/herredite_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_3/it_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_3/the_witch_poster.png" alt="Image 3">
+        <div class="body__carousel__3">
+            <div class="carousel__3">
+                <img class="carousel__img__3" src="assets/planning_images/day_1/crenel_3/herredite_poster.png" alt="Image 1">
+                <img class="carousel__img__3" src="assets/planning_images/day_1/crenel_3/it_poster.png" alt="Image 2">
+                <img class="carousel__img__3" src="assets/planning_images/day_1/crenel_3/the_witch_poster.png" alt="Image 3">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__3">❮</button>
+            <button class="button__next__3">❯</button>
         </div>
         <p class="body__semi__title">
             22h - 00h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_4/friday_thirteen_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_4/the_conjuring_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_1/crenel_4/the_hill_has_eyes_poster.png" alt="Image 3">
+        <div class="body__carousel__4">
+            <div class="carousel__4">
+                <img class="carousel__img__4" src="assets/planning_images/day_1/crenel_4/friday_thirteen_poster.png" alt="Image 1">
+                <img class="carousel__img__4" src="assets/planning_images/day_1/crenel_4/the_conjuring_poster.png" alt="Image 2">
+                <img class="carousel__img__4" src="assets/planning_images/day_1/crenel_4/the_hill_has_eyes_poster.png" alt="Image 3">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__4">❮</button>
+            <button class="button__next__4">❯</button>
         </div>
         <p class="body__title">
             Jour 2
@@ -103,52 +114,52 @@
         <p class="body__semi__title">
             11h - 13h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_1/midsommar_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_1/nightmare_on_elm_street_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_1/texas_chainsaw_massacre_poster.png" alt="Image 3">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_1/the_shining_poster.png" alt="Image 4">
+        <div class="body__carousel__5">
+            <div class="carousel__5">
+                <img class="carousel__img__5" src="assets/planning_images/day_2/crenel_1/midsommar_poster.png" alt="Image 1">
+                <img class="carousel__img__5" src="assets/planning_images/day_2/crenel_1/nightmare_on_elm_street_poster.png" alt="Image 2">
+                <img class="carousel__img__5" src="assets/planning_images/day_2/crenel_1/texas_chainsaw_massacre_poster.png" alt="Image 3">
+                <img class="carousel__img__5" src="assets/planning_images/day_2/crenel_1/the_shining_poster.png" alt="Image 4">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__5">❮</button>
+            <button class="button__next__5">❯</button>
         </div>
         <p class="body__semi__title">
             15h - 17h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_2/annabelle_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_2/hostel_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_2/the_ring_poster.png" alt="Image 3">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_2/winnie_the_pooh_poster.png" alt="Image 4">
+        <div class="body__carousel__6">
+            <div class="carousel__6">
+                <img class="carousel__img__6" src="assets/planning_images/day_2/crenel_2/annabelle_poster.png" alt="Image 1">
+                <img class="carousel__img__6" src="assets/planning_images/day_2/crenel_2/hostel_poster.png" alt="Image 2">
+                <img class="carousel__img__6" src="assets/planning_images/day_2/crenel_2/the_ring_poster.png" alt="Image 3">
+                <img class="carousel__img__6" src="assets/planning_images/day_2/crenel_2/winnie_the_pooh_poster.png" alt="Image 4">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__6">❮</button>
+            <button class="button__next__6">❯</button>
         </div>
         <p class="body__semi__title">
             19h - 21h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_3/jaws_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_3/rec_four_apocalypse_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_3/the_invisible_man.png" alt="Image 3">
+        <div class="body__carousel__7">
+            <div class="carousel__7">
+                <img class="carousel__img__7" src="assets/planning_images/day_2/crenel_3/jaws_poster.png" alt="Image 1">
+                <img class="carousel__img__7" src="assets/planning_images/day_2/crenel_3/rec_four_apocalypse_poster.png" alt="Image 2">
+                <img class="carousel__img__7" src="assets/planning_images/day_2/crenel_3/the_invisible_man.png" alt="Image 3">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__7">❮</button>
+            <button class="button__next__7">❯</button>
         </div>
         <p class="body__semi__title">
             22h - 00h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_4/hellraiser_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_4/insidous_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_2/crenel_4/scream_poster.png" alt="Image 3">
+        <div class="body__carousel__8">
+            <div class="carousel__8">
+                <img class="carousel__img__8" src="assets/planning_images/day_2/crenel_4/hellraiser_poster.png" alt="Image 1">
+                <img class="carousel__img__8" src="assets/planning_images/day_2/crenel_4/insidous_poster.png" alt="Image 2">
+                <img class="carousel__img__8" src="assets/planning_images/day_2/crenel_4/scream_poster.png" alt="Image 3">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__8">❮</button>
+            <button class="button__next__8">❯</button>
         </div>
         <p class="body__title">
             Jour 3
@@ -156,52 +167,52 @@
         <p class="body__semi__title">
             11h - 13h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_1/dont_breathe_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_1/suspiria_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_1/the_grudge_poster.png" alt="Image 3">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_1/the_orphanage.png" alt="Image 4">
+        <div class="body__carousel__9">
+            <div class="carousel__9">
+                <img class="carousel__img__9" src="assets/planning_images/day_3/crenel_1/dont_breathe_poster.png" alt="Image 1">
+                <img class="carousel__img__9" src="assets/planning_images/day_3/crenel_1/suspiria_poster.png" alt="Image 2">
+                <img class="carousel__img__9" src="assets/planning_images/day_3/crenel_1/the_grudge_poster.png" alt="Image 3">
+                <img class="carousel__img__9" src="assets/planning_images/day_3/crenel_1/the_orphanage.png" alt="Image 4">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__9">❮</button>
+            <button class="button__next__9">❯</button>
         </div>
         <p class="body__semi__title">
             15h - 17h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_2/get_out_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_2/sinister_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_2/the_badabook_poster.png" alt="Image 3">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_2/the_nun_poster.png" alt="Image 4">
+        <div class="body__carousel__10">
+            <div class="carousel__10">
+                <img class="carousel__img__10" src="assets/planning_images/day_3/crenel_2/get_out_poster.png" alt="Image 1">
+                <img class="carousel__img__10" src="assets/planning_images/day_3/crenel_2/sinister_poster.png" alt="Image 2">
+                <img class="carousel__img__10" src="assets/planning_images/day_3/crenel_2/the_badabook_poster.png" alt="Image 3">
+                <img class="carousel__img__10" src="assets/planning_images/day_3/crenel_2/the_nun_poster.png" alt="Image 4">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__10">❮</button>
+            <button class="button__next__10">❯</button>
         </div>
         <p class="body__semi__title">
             19h - 21h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_3/terrifier_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_3/the_human_centipede_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_3/the_thing_poster.png" alt="Image 3">
+        <div class="body__carousel__11">
+            <div class="carousel__11">
+                <img class="carousel__img__11" src="assets/planning_images/day_3/crenel_3/terrifier_poster.png" alt="Image 1">
+                <img class="carousel__img__11" src="assets/planning_images/day_3/crenel_3/the_human_centipede_poster.png" alt="Image 2">
+                <img class="carousel__img__11" src="assets/planning_images/day_3/crenel_3/the_thing_poster.png" alt="Image 3">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__11">❮</button>
+            <button class="button__next__11">❯</button>
         </div>
         <p class="body__semi__title">
             22h - 00h30
         </p>
-        <div class="body__carousel">
-            <div class="carousel">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_4/carrie_poster.png" alt="Image 1">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_4/saw_poster.png" alt="Image 2">
-                <img class="carousel__img" src="assets/planning_images/day_3/crenel_4/twenty_eight_days_later_poster.png" alt="Image 3">
+        <div class="body__carousel__12">
+            <div class="carousel__12">
+                <img class="carousel__img__12" src="assets/planning_images/day_3/crenel_4/carrie_poster.png" alt="Image 1">
+                <img class="carousel__img__12" src="assets/planning_images/day_3/crenel_4/saw_poster.png" alt="Image 2">
+                <img class="carousel__img__12" src="assets/planning_images/day_3/crenel_4/twenty_eight_days_later_poster.png" alt="Image 3">
             </div>
-            <button class="button__prev">❮</button>
-            <button class="button__next">❯</button>
+            <button class="button__prev__12">❮</button>
+            <button class="button__next__12">❯</button>
         </div>
     </body>
     <footer class="footer__class">
