--- a/programmation.html
+++ b/programmation.html
@@ -51,10 +51,10 @@
         <p class="body__text">
             Les différents crénaux sont :
         </p>
-        <li class="body__text">11h - 13h30</li>
-        <li class="body__text">15h - 17h30</li>
-        <li class="body__text">19h - 21h30</li>
-        <li class="body__text">22h - 00h30</li>
+        <li class="body__list">11h - 13h30</li>
+        <li class="body__list">15h - 17h30</li>
+        <li class="body__list">19h - 21h30</li>
+        <li class="body__list">22h - 00h30</li>
         <p class="body__title">
             Jour 1
         </p>
