Billeterie.html + Quelques ajustements

--- a/billetterie.html
+++ b/billetterie.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="src/css/style.css">
-        <title>Contacts</title>
+        <title>Billetterie en ligne</title>
         <link rel="icon" href="assets/favicons/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,20 +24,19 @@
         </div>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
-            <img class="header__img" src="assets/header/seated_pumpkin.png">
-            <h1 class="header__title">Contacts</h1>
+            <img class="header__img" src="assets/header/scary_room.png">
+            <h1 class="header__title">Billetterie</h1>
         </div>
-        <h2 class="body__title">Lieu</h2>
+        <h2 class="body__title">Les prix</h2>
+        <p class="body__text">Le <span class="body__bold">Festiv'Halloween</span> s'engage à rendre l'événement accessible à tous en proposant plusieurs <span class="body__bold">tarifs adaptés</span> aux différents publics. Que vous soyez étudiant ou simple amateur de films d'<span class="body__bold">horreur</span>, vous trouverez un prix qui vous correspond. Un tarif spécial est réservé aux <span class="body__bold">étudiants</span>. Pour le reste du public, un tarif standard est appliqué. <span class="body__bold">Festiv'Halloween</span>, c'est une expérience unique, ouverte à tous !</p>
+        <p class="body__text">Tarif :</p>
         <div class="body__list">
-            <li class="body__text__list">Montbéliard - 25200</li>
-            <li class="body__text__list">8 rue Henri Mouhot</li>
-            <li class="body__text__list">Tél : 03 81 94 53 89</li>
+            <li class="body__text__list"><span class="body__bold">5€</span> / films pour les étudiants et les enfants</li>
+            <li class="body__text__list"><span class="body__bold">10€</span> / films pour le reste du public</li>
         </div>
-        <img class="body__img" src="assets/others_images/colisee_image.png"></img>
-        <p class="body__small__text">Photographie du colisée</p>
-        <h2 class="body__title">Dates</h2>
-        <div class="body__list">
-            <li class="body__text__list">Du 29 au 31 Octobre 2024</li>
+        <div class="body__btn">
+            <img src="assets/others_images/other__icons/icon_arrow.png" class="body__btn__img">
+            <span class="body__btn__text">Accédder à la billetterie</span>
         </div>
     </body>
     <footer class="footer__class">
