--- a/programmation.html
+++ b/programmation.html
@@ -52,10 +52,10 @@
             Les différents crénaux sont :
         </p>
         <div class="body__list">
-            <li class="body__text">11h - 13h30</li>
-            <li class="body__text">15h - 17h30</li>
-            <li class="body__text">19h - 21h30</li>
-            <li class="body__text">22h - 00h30</li>
+            <li class="body__text__list">11h - 13h30</li>
+            <li class="body__text__list">15h - 17h30</li>
+            <li class="body__text__list">19h - 21h30</li>
+            <li class="body__text__list">22h - 00h30</li>
         </div>
         <p class="body__title">
             Jour 1
