--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="card__block">
                 <p class="card__title">Du 29 au 31 Octobre</p>
                 <p class="card__text">Le premier Festiv'Haloween se déroulera à Montbéliard.</p>
-                <a class="card__link">Plus d'infos</a>
+                <a class="card__link" href="contacts.html">Plus d'infos</a>
             </div>
         </div>
         <div class="card__class">
@@ -64,7 +64,7 @@
             <div class="card__block">
                 <p class="card__title">Billetterie en ligne</p>
                 <p class="card__text">Découvrez la billetterie en ligne pour obtenir des places.</p>
-                <a class="card__link">Plus d'infos</a>
+                <a class="card__link" href="billetterie.html">Plus d'infos</a>
             </div>
         </div>
         <div class="card__class">
