--- a/contacts.html
+++ b/contacts.html
@@ -34,7 +34,7 @@
             <li class="body__text__list">Tél : 03 81 94 53 89</li>
         </div>
         <img class="body__img" src="assets/others_images/colisee_image.png"></img>
-        <p class="body__small__text">Photographie du colisée</p>
+        <p class="body__small__text__under_img">Photographie du colisée</p>
         <h2 class="body__title">Dates</h2>
         <div class="body__list">
             <li class="body__text__list">Du 29 au 31 Octobre 2024</li>
