--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="card__block">
                 <p class="card__title">Filmographie</p>
                 <p class="card__text">Découvrez les films en tête d'affiche du festival.</p>
-                <a class="card__link">Plus d'infos</a>
+                <a class="card__link" href="fimographie.html">Plus d'infos</a>
             </div>
         </div>
         <div class="card__class">
