--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="card__block">
                 <p class="card__title">À propos</p>
                 <p class="card__text">Apprenez en plus sur ce festival de films d'horreurs</p>
-                <a class="card__link">Plus d'infos</a>
+                <a class="card__link" href="a_propos.html">Plus d'infos</a>
             </div>
         </div>
     </body>
