--- a/a_propos.html
+++ b/a_propos.html
@@ -18,7 +18,9 @@
     </head>
     <body>
         <div class="header__mobile">
-            <img class="header__logo" src="assets/logo/logo_without_text.png">
+            <a href="index.html">
+                <img class="header__logo" src="assets/logo/logo_without_text.png">
+            </a>
             <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
             <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png">
         </div>
@@ -32,7 +34,9 @@
     </body>
     <footer class="footer__class">
         <div class="footer__content">
-            <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png">
+            <a href="index.html">
+                <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png">
+            </a>
             <span class="footer__festivhalloween__title">Festiv'Halloween</span>
             <div class="footer__section">
                 <p class="footer__semi__title">
