--- a/a_propos.html
+++ b/a_propos.html
@@ -22,7 +22,9 @@
                 <img class="header__logo" src="assets/logo/logo_without_text.png">
             </a>
             <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
-            <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png">
+            <button class="menu__btn">
+                <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png">
+            </button>
         </div>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
