--- a/contacts.html
+++ b/contacts.html
@@ -22,7 +22,9 @@
                 <img class="header__logo" src="assets/logo/logo_without_text.png">
             </a>
             <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
-            <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png">
+            <button class="menu__btn">
+                <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png">
+            </button>
         </div>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
@@ -36,7 +38,7 @@
             <li class="body__text__list">Tél : 03 81 94 53 89</li>
         </div>
         <img class="body__img" src="assets/others_images/colisee_image.png"></img>
-        <p class="body__small__text__under_img">Photographie du colisée</p>
+        <p class="body__small__text__under__img">Photographie du colisée</p>
         <h2 class="body__title">Dates</h2>
         <div class="body__list">
             <li class="body__text__list">Du 29 au 31 Octobre 2024</li>
