Menu fonctionnel sur toutes les pages

--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Hammersmith+One&family=Nosifer&display=swap" rel="stylesheet">
-    </head>
+        <script src="src/js/menu.js"></script>
+   </head>
     <body>
         <div class="header__mobile">
             <a href="index.html">
@@ -26,6 +27,37 @@
                 <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png">
             </button>
         </div>
+        <nav class="header__menu menu" id="mainNav" aria-hidden="true">
+            <img src="assets/logo/logo_with_text.png" class="menu__logo">
+            <img src="assets/icons/header_icons/icon_search.png" class="menu__icon__search">
+            <button class="menu__btn__cross">
+                <img src="assets/icons/menu_icons/icon_cross.png" class = "menu__icon__cross">
+            </button>
+            <img src="assets/icons/menu_icons/icon_pumpkin.png" class="menu__icon">
+            <a class="menu__link" href="index.html">
+                <span class="menu__text">Accueil</span>
+            </a>
+            <img src="assets/icons/menu_icons/icon_ping.png" class="menu__icon">
+            <a class="menu__link" href="contacts.html">
+                <span class="menu__text">Contacts</span>
+            </a>
+            <img src="assets/icons/menu_icons/icon_bat.png" class="menu__icon">
+            <a class="menu__link" href="programmation.html">
+                <span class="menu__text">Programmation</span>
+            </a>
+            <img src="assets/icons/menu_icons/icon_ticket.png" class="menu__icon">
+            <a class="menu__link" href="billetterie.html">
+                <span class="menu__text">Billetterie</span>
+            </a>
+            <img src="assets/icons/menu_icons/icon_camera.png" class="menu__icon">
+            <a class="menu__link" href="fimographie.html">
+                <span class="menu__text">Filmographie</span>
+            </a>
+            <img src="assets/icons/menu_icons/icon_gosth.png" class="menu__icon">
+            <a class="menu__link" href="a_propos.html">
+                <span class="menu__text">À propos</span>
+            </a>
+        </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
             <img class="header__img" src="assets/header/seated_pumpkin.png">
