Création d'une template de page film

--- a/fimographie.html
+++ b/fimographie.html
@@ -67,7 +67,7 @@
         <p class="body__little__title">Le Festiv'Halloween propose une vaste sélection de films d'horreur, allant des classiques incontournables aux découvertes surprenantes. Parmi cette diversité, quelques films phares se distinguent en tête d'affiche, prêts à captiver et à terrifier les spectateurs. Cette programmation variée est conçue pour satisfaire tous les amateurs du genre, tout en mettant en avant des chefs-d'œuvre qui marqueront les esprits.</p>
         <p class="body__title">Les films en tête d'affiche :</p>
         <img src="assets/filmography/terrifier.png" class="body__big__poster">
-        <p class="body__semi__title">Terrifier</p>
+        <a class="body__semi__title" href="page_film.html">Terrifier</a>
         <p class="body__text">Terrifier est un film d'horreur slasher sorti en 2016, centré sur un tueur masqué et sadique, Art the Clown. Le film suit deux jeunes femmes, Victoria et Tara, qui sont attaquées par Art alors qu'elles passent une soirée tranquille dans une pizzeria.</p>
         <p class="body__small__text">Diffusé le 31 Octobre à 19h</p>
         <img src="assets/filmography/it.png" class="body__big__poster">
