--- a/page_film.html
+++ b/page_film.html
@@ -38,8 +38,8 @@
                 <span class="menu__text">Accueil</span>
             </a>
             <img src="assets/icons/menu_icons/icon_ping.png" class="menu__icon">
-            <a class="menu__link" href="contacts.html">
-                <span class="menu__text">Contacts</span>
+            <a class="menu__link" href="presentation.html">
+                <span class="menu__text">Presentation</span>
             </a>
             <img src="assets/icons/menu_icons/icon_bat.png" class="menu__icon">
             <a class="menu__link" href="programmation.html">
@@ -88,7 +88,7 @@
                 </p>
                 <p class="footer__list">
                     Accueil <br>
-                    Contacts <br>
+                    Presentation <br>
                     Programmation <br>
                     Billetterie <br>
                     Filmographie <br>
