--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="src/css/style.css">
-        <title>Contacts</title>
+        <title>Presentation</title>
         <link rel="icon" href="assets/favicons/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,8 +38,8 @@
                 <span class="menu__text">Accueil</span>
             </a>
             <img src="assets/icons/menu_icons/icon_ping.png" class="menu__icon">
-            <a class="menu__link" href="contacts.html">
-                <span class="menu__text">Contacts</span>
+            <a class="menu__link" href="presentation.html">
+                <span class="menu__text">Presentation</span>
             </a>
             <img src="assets/icons/menu_icons/icon_bat.png" class="menu__icon">
             <a class="menu__link" href="programmation.html">
@@ -61,20 +61,16 @@
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
             <img class="header__img" src="assets/header/seated_pumpkin.png">
-            <h1 class="header__title">Contacts</h1>
+            <h1 class="header__title">Presentation</h1>
         </div>
-        <h2 class="body__title">Lieu</h2>
-        <div class="body__list">
-            <li class="body__text__list">Montbéliard - 25200</li>
-            <li class="body__text__list">8 rue Henri Mouhot</li>
-            <li class="body__text__list">Tél : 03 81 94 53 89</li>
-        </div>
-        <img class="body__img" src="assets/others_images/colisee_image.png"></img>
-        <p class="body__small__text__under__img">Photographie du colisée</p>
-        <h2 class="body__title">Dates</h2>
-        <div class="body__list">
-            <li class="body__text__list">Du 29 au 31 Octobre 2024</li>
-        </div>
+        <h2 class="body__title">Presentation du festival</h2>
+        <p class="body__text">Notre festival se nomme Festiv'Halloween, il a pour thème les films d'horreurs et d'épouvantes. Il se déroulera du 29 au 31 Octobre au colisée à Montbéliard (25200).</p>
+        <p class="body__text">Notre motivation a été  d'organiser un événement pour les amateurs de films d'horreur, les jeunes et les professionels du cinéma.</p>
+        <h2 class="body__title">Présentation de notre équipe</h2>
+        <p class="body__text">Notre équipe se compose de bénévoles, ainsi que de l'équipe du Colisée. Tout ces gens pourront nous permettre de vous faire vivre une incroyable aventure au Festiv'Halloween</p>
+        <h2 class="body__title">Notre Charte</h2>
+        <p class="body__text">Nos valeurs sont le partage, la culture, la diversité et le divertissement</p>
+        <p class="body__little__title">Nous esperons que vous passerez un agréable moment en notre compagnie. À très bientôt au Festiv'Halloween</p>
     </body>
     <footer class="footer__class">
         <div class="footer__content">
@@ -88,7 +84,7 @@
                 </p>
                 <p class="footer__list">
                     Accueil <br>
-                    Contacts <br>
+                    Presentation <br>
                     Programmation <br>
                     Billetterie <br>
                     Filmographie <br>
