--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <span class="menu__text">Accueil</span>
             </a>
             <img src="assets/icons/menu_icons/icon_ping.png" class="menu__icon">
-            <a class="menu__link" href="contacts.html">
-                <span class="menu__text">Contacts</span>
+            <a class="menu__link" href="presentation.html">
+                <span class="menu__text">Presentation</span>
             </a>
             <img src="assets/icons/menu_icons/icon_bat.png" class="menu__icon">
             <a class="menu__link" href="programmation.html">
@@ -84,7 +84,7 @@
             <div class="card__block">
                 <p class="card__title">Du 29 au 31 Octobre</p>
                 <p class="card__text">Le premier Festiv'Haloween se déroulera à Montbéliard.</p>
-                <a class="card__link" href="contacts.html">Plus d'infos</a>
+                <a class="card__link" href="pres.html">Plus d'infos</a>
             </div>
         </div>
         <div class="card__class">
@@ -130,7 +130,7 @@
                 </p>
                 <p class="footer__list">
                     Accueil <br>
-                    Contacts <br>
+                    Presentation <br>
                     Programmation <br>
                     Billetterie <br>
                     Filmographie <br>
