--- a/presentation.html
+++ b/presentation.html
@@ -70,7 +70,16 @@
         <p class="body__text">Notre équipe se compose de bénévoles, ainsi que de l'équipe du Colisée. Tout ces gens pourront nous permettre de vous faire vivre une incroyable aventure au Festiv'Halloween</p>
         <h2 class="body__title">Notre Charte</h2>
         <p class="body__text">Nos valeurs sont le partage, la culture, la diversité et le divertissement</p>
-        <p class="body__little__title">Nous esperons que vous passerez un agréable moment en notre compagnie. À très bientôt au Festiv'Halloween</p>
+        <h2 class="body__title">Voici toutes les infos pratiques</h2>
+        <p class="body__semi__title">Présentation des prix :</p>
+        <div class="body__list">
+            <li class="body__text__list">5€ / Étudiants et enfants</li>
+            <li class="body__text__list">10€ / Standard</li>
+        </div>
+        <p class="body__semi__title">Lieu :</p>
+        <p class="body__text">Le festival se déroulera au colisée à Montébéliard (8 Rue henri Mouhot)</p>
+        <img src="assets/others_images/colisee_image.png" class="body__img">
+        <p class="body__small__text">Photographie du colisée</p>
     </body>
     <footer class="footer__class">
         <div class="footer__content">
